--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -93,6 +93,15 @@ body {
   }
 }
 
+// Buutton
+.btn {
+  border-radius: 1em;
+  box-shadow: 3px 3px 5px 1px rgba(0, 0, 0, .3);
+  &:hover {
+    box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, .5);
+  }
+}
+
 a {
   cursor: pointer;
 }
